--- a/text-notes/Vulkan-develop-notes/PBR Material/1. Practical Tricks of PBR Theory Implementation.md
+++ b/text-notes/Vulkan-develop-notes/PBR Material/1. Practical Tricks of PBR Theory Implementation.md
@@ -43,7 +43,7 @@ $$
 
 ### 2. 对 Schlick 近似的理解总结
 
-$\eqref{Standard Schlick Frensnel}$ 式中，$F_0$ 描述的是光谱能量分布，对于图形学而言，一般是 RGB 三种波长上的能量分布。Fresnel 效应描述了入射光与法线夹角越大，反射的能量越多，直至 $90^\circ$(grazing) 到达峰值。换句话说，反射率会随着入射光与法线夹角增大而增大，而 $F_0$ 是入射光沿着法线方向入射时(垂直入射)的反射率。$\eqref{Standard Schlick Frensnel}$ 式就是垂直入射时的反射率与 grazing 入射时的反射率之间的插值，入射光与法线夹角越接近 $90^\circ$，反射率越接近 grazing 入射的反射率，$\eqref{Standard Schlick Frensnel}$ 式中为 $1$，表示最大时反射全部入射能量，$\eqref{General Schlick Fresnel}$ 中为 $F_{D90}$ 参数，一个可调控的参数。 
+$\eqref{Standard Schlick Frensnel}$ 式中，$F_0$ 描述的是光谱能量分布，对于图形学而言，一般是 RGB 三种波长上的能量分布。Fresnel 效应描述了入射光与半程向量(入射方向与观察方向的中间)夹角越大，反射的能量越多，直至 $90^\circ$(grazing) 到达峰值。换句话说，反射率会随着入射光与法线夹角增大而增大，而 $F_0$ 是入射光沿着法线方向入射时(垂直入射)的反射率。$\eqref{Standard Schlick Frensnel}$ 式就是垂直入射时的反射率与 grazing 入射时的反射率之间的插值，入射光与法线夹角越接近 $90^\circ$，反射率越接近 grazing 入射的反射率，$\eqref{Standard Schlick Frensnel}$ 式中为 $1$，表示最大时反射全部入射能量，$\eqref{General Schlick Fresnel}$ 中为 $F_{D90}$ 参数，一个可调控的参数。 
 
 **注意 $F_0$ 与 $F_{D90}$ 的区别**：在实际的材质中，$F_0$ 通常由贴图给出，即 Specular Map，而从该贴图中采样的数值称为 Specular Color，表示垂直入射时的反射率。而 $F_{D90}$ 是 grazing 入射(入射光与法线呈 $90^\circ$)时的反射率。在 Disney Principled BRDF[[2]](#[2]) 中，经过实际测量，给出 $F_{D90}$ 与粗糙度相关的表达式：
 $$
