--- a/text-notes/Vulkan-develop-notes/Shadow/2. Soft-Edged Shadow.md
+++ b/text-notes/Vulkan-develop-notes/Shadow/2. Soft-Edged Shadow.md
@@ -326,8 +326,10 @@ $$
 
 #### 2.2 计算 blocker 深度
 
-对 shadow map 当前采样点的给定大小的附近区域内进行多次随机采样，这一步骤与 PCF 的区域多次随机采样相同。如果随机采样点的深度值小于当前像素到光源的深度值，则说明该随机采样点为一个 blocker。$d_{Blocker}$ 就是所有随机采样点中所有 blocker 的深度的平均。假设共得到 $N$ 个随机采样点，其中有 $M$ 个 blocker，那么 $d_{Blocker} = (M 个 blocker 深度之和)/M$。
-
+对 shadow map 当前采样点的给定大小的附近区域内进行多次随机采样，这一步骤与 PCF 的区域多次随机采样相同。如果随机采样点的深度值小于当前像素到光源的深度值，则说明该随机采样点为一个 blocker。$d_{Blocker}$ 就是所有随机采样点中所有 blocker 的深度的平均。假设共得到 $N$ 个随机采样点，其中有 $M$ 个 blocker，那么 
+$$
+d_{Blocker} = (M 个 blocker 深度之和)/M
+$$
 将得到的 $d_{Blocker}$ 代入计算，得到 $W_{Penumbra}$，再乘上一个缩放因子作为 PCF 的 filter size，下面就执行 PCF 算法。
 
 但计算 $d_{Blocker}$ 也需要在区域内进行随机采样，那么这个区域大小如何确定？如下图所示：
