--- a/text-notes/Vulkan-develop-notes/Vulkan Basics/5. Compute Shader 基础.md
+++ b/text-notes/Vulkan-develop-notes/Vulkan Basics/5. Compute Shader 基础.md
@@ -62,7 +62,7 @@ GPU 具有非常多的处理器核心，在 Nvidia 中称为 Streaming Multiproc
   layout(local_size_x = X, local_size_y = Y, local_size_z = Z) in;
   ```
 
-  上述声明表示，当前 compute shader 描述的 invocation 的 local workgroup 大小为 $X\cross Y \cross Z$ 
+  上述声明表示，当前 compute shader 描述的 invocation 的 local workgroup 大小为 $X\times Y \times Z$ 
 
 - subgroup：local workgroup 中同时并行执行的 invocation 组，对应一个 Warp。如上述 Warp，subgroup 中的 invocation 同样有 active 和 inactive 两种状态，且具有相同的机制。
 
@@ -71,7 +71,7 @@ GPU 具有非常多的处理器核心，在 Nvidia 中称为 Streaming Multiproc
   void vkCmdDispatch(VkCommandBuffer cmdBuf, uint32_t groupCountX, uint32_t groupCountY, uint32_t groupCountZ);
   ```
 
-  上述调用表面 global workgroup 中具有 (groupCountX x groupCountY x groupCountZ) 个 local workgroup，因此共有 (groupCountX x groupCountY x groupCountZ) x $X\cross Y \cross Z$ 个 invocation/线程。
+  上述调用表明 global workgroup 中具有 (groupCountX x groupCountY x groupCountZ) 个 local workgroup，因此共有 (groupCountX x groupCountY x groupCountZ) x $X\times Y \times Z$ 个 invocation/线程。
 
 Compute shader 的执行过程可以简要描述为：`vkCmdDispatch` 命令生成了一批 local workgroup，GPU 会将这批 local workgroup 划分到某些 SM 上执行，GPU 上的所有 SM 以并行形式执行。在 local workgroup 执行期间，一般不会离开其执行于的 SM。local workgroup 包含多个 invocation，GPU 的最小调度单位是 Warp，因此一个 local workgroup 会先被划分为一组 subgroup，每个 subgroup 的 invocation 可以并行执行。
 
