--- a/text-notes/graphic basics/1. Projection Transformations.md
+++ b/text-notes/graphic basics/1. Projection Transformations.md
@@ -10,7 +10,7 @@
 
 ### Orthographic Projection
 
-正交投影将 $(-l,r)\cross(-b,t)\cross(-n,-f)$ 的视锥体变换为 $(-1,1)\cross(-1,1)\cross(-1,1)$。注意：**通常情况下正交投影的视锥体定义为关于 $z$ 轴对称**，即 $l=r,b=t$，在本文最后结果对应替换即可。正交投影的过程可分为两步：先将视锥体近平面的中心平移至相机坐标系的原点；再将大小进行缩放。
+正交投影将 $(-l,r)\times(-b,t)\times(-n,-f)$ 的视锥体变换为 $(-1,1)\times(-1,1)\times(-1,1)$。注意：**通常情况下正交投影的视锥体定义为关于 $z$ 轴对称**，即 $l=r,b=t$，在本文最后结果对应替换即可。正交投影的过程可分为两步：先将视锥体近平面的中心平移至相机坐标系的原点；再将大小进行缩放。
 
 #### 1. 视锥体的中心平移至原点
 
@@ -31,8 +31,8 @@ $$
 
 #### 2. frustum 进行缩放
 
-经过平移后的视锥体为 $(\frac{-l-r}{2},\frac{l+r}{2})\cross(\frac{-b-t}{2},\frac{b+t}{2})\cross(\frac{n-f}{2},\frac{f-n}{2})$，将平移后的视锥体缩放为
- $(-1,1)\cross(-1,1)\cross(-1,1)$，构建缩放矩阵
+经过平移后的视锥体为 $(\frac{-l-r}{2},\frac{l+r}{2})\times(\frac{-b-t}{2},\frac{b+t}{2})\times(\frac{n-f}{2},\frac{f-n}{2})$，将平移后的视锥体缩放为
+ $(-1,1)\times(-1,1)\times(-1,1)$，构建缩放矩阵
 $$
 M_{orthoS}=
 \begin{pmatrix}
@@ -201,7 +201,7 @@ $$
 
 #### 3. 对于深度范围为 [0,1] 的投影变换
 
-Direct3D 与 Vulkan 的深度范围为 $[0,1]$，因此对应 clip space 的 view volume 为 $(-1,1)\cross(-1,1)\cross(0,1)$。因此需要修改正交投影变换：
+Direct3D 与 Vulkan 的深度范围为 $[0,1]$，因此对应 clip space 的 view volume 为 $(-1,1)\times(-1,1)\times(0,1)$。因此需要修改正交投影变换：
 
 1. 首先将视锥体的近平面中心点平移至原点，近平面中心点坐标为 $\large \left(\frac{r-l}{2},\frac{t-b}{2},-n\right)$
    $$
@@ -214,7 +214,7 @@ Direct3D 与 Vulkan 的深度范围为 $[0,1]$，因此对应 clip space 的 vie
    \end{pmatrix}
    $$
 
-2. 然后缩放平移后的视锥体 $(\frac{-l-r}{2},\frac{l+r}{2})\cross(\frac{-b-t}{2},\frac{b+t}{2})\cross(0,-(f-n))$ 为 $(-1,1)\cross(-1,1)\cross(0,1)$
+2. 然后缩放平移后的视锥体 $(\frac{-l-r}{2},\frac{l+r}{2})\times(\frac{-b-t}{2},\frac{b+t}{2})\times(0,-(f-n))$ 为 $(-1,1)\times(-1,1)\times(0,1)$
    $$
    M_{orthoS}=
    \begin{pmatrix}
