--- a/text-notes/graphic basics/2. Real-Time Physically Based Material Basics.md
+++ b/text-notes/graphic basics/2. Real-Time Physically Based Material Basics.md
@@ -146,7 +146,7 @@ $$
 F_{R_{||}}=\left(\frac{\eta_2\cos\theta_1-\eta_1\cos\theta_2}{\eta_2\cos\theta_1+\eta_1\cos\theta_2}\right)^2 \\
 F_{R_{\perp}}=\left(\frac{\eta_1\cos\theta_2-\eta_2\cos\theta_1}{\eta_1\cos\theta_2+\eta_2\cos\theta_1}\right)^2
 $$
-其中，$\eta_1,\eta_2$ 分别为折射前后的介质的折射率（ior），$\theta_1$ 为入射角，$\theta_2$ 为折射角。特殊地，图形学中通常考虑无偏振入射光，即含有等量的 s 极化与 p 极化，反射比为，
+其中，$\eta_1,\eta_2$ 分别为折射前后的介质的折射率(ior)，$\theta_1$ 为入射角，$\theta_2$ 为折射角。特殊地，图形学中通常考虑无偏振入射光，即含有等量的 s 极化与 p 极化，反射比为，
 $$
 F_R=\frac{1}{2}(F_{R_{||}}+F_{R_{\perp}})
 $$
@@ -167,7 +167,7 @@ $$
 \begin{align}
 F_R\approx F_{Schlick}&=F_0+(1-F_0)(1-\cos\theta)^5 \\
 &=(1-\cos\theta)^5\cdot 1 + (1-(1-\cos\theta)^5)\cdot F_0\\
-where \quad F_0=&\left(\frac{\eta_1-\eta_2}{\eta_1+\eta_2}\right)^2,\cos\theta=\boldsymbol{l}\cdot\boldsymbol{n}
+where \quad F_0=&\left(\frac{\eta_1-\eta_2}{\eta_1+\eta_2}\right)^2,\cos\theta=\boldsymbol{l}\cdot\boldsymbol{h}
 \end{align}
 $$
 
