--- a/text-notes/graphic basics/4. Importance Sample BRDF.md
+++ b/text-notes/graphic basics/4. Importance Sample BRDF.md
@@ -38,7 +38,7 @@ $$
 想要求上述积分，除了很多采样点之外，还需要知道 $\boldsymbol{l}$ 的概率密度 $p(\boldsymbol{l})$，而这个概率密度的选取要尽量接近被积函数的分布，即采用重要性采样的思想。
 
 ### 2. 重要性采样 [[5]](#[5])
-在蒙特卡洛积分中，采样概率密度的选取能够影响到积分结果的方差。如果选取的分布接近被积函数的分布，那么蒙特卡洛积分的收敛速度会更快。例如 $\eqref{BRDF MC}$ 的被积函数，其中有一个 $\cos\theta_l$ 项，如果采样得到的样本 $\boldsymbol{l}_k$ 垂直于法线，即 $\cos\theta_{l_k}=0$，此时，被积函数值为0，因此这类采样点对积分结果无任何共享。
+在蒙特卡洛积分中，采样概率密度的选取能够影响到积分结果的方差。如果选取的分布接近被积函数的分布，那么蒙特卡洛积分的收敛速度会更快。例如 $\eqref{BRDF MC}$ 的被积函数，其中有一个 $\cos\theta_l$ 项，如果采样得到的样本 $\boldsymbol{l}_k$ 垂直于法线，即 $\cos\theta_{l_k}=0$，此时，被积函数值为 0，因此这类采样点对积分结果无任何共享。
 
 为了节省蒙特卡洛采样次数，应该避免采样到无用点，因此需要调整采样概率密度。当光源项与 BRDF 项未知时，使得采样概率密度 $p(\boldsymbol{l})$ 正比于 $\cos\theta_l$，经常称为 **cosine-weighted sample hemisphere**。
 $$
@@ -49,9 +49,8 @@ $$
 \begin{align}
 \int_{\Omega^+}p(\boldsymbol{l})\space d\omega_l &= \int_{\Omega^+} c\cdot \cos\theta_l\space d\omega_l \\
 &=c\cdot \int_0^{2\pi}\int_0^{\pi/2}\cos\theta_l\sin\theta_l\space d\theta_ld\phi_l \\
-&=c\cdot \pi \\
-&=1
-\end{align}
+&=c\cdot \pi =1
+\end{align} \label{cosine-int}\tag{1}
 $$
 因此 $\Large c=\frac{1}{\pi}$，将入射方向 $\boldsymbol{l}$ 的概率密度 $p(\boldsymbol{l})$ 在**数值上**可按下式计算：
 $$
@@ -60,7 +59,7 @@ $$
 
 #### 2.1 采样过程
 
-实际的采样无法直接采样立体角，需要将立体角形式的概率密度转换到球坐标：
+实际的采样无法直接采样立体角，需要将立体角形式的概率密度转换到球坐标的概率密度，如 $\eqref{cosine-int}$ 式的变换：
 $$
 p(\boldsymbol{l}) = p_{\boldsymbol{l}}(\phi_l,\theta_l) =\frac{1}{\pi}\cdot \cos\theta_l\cdot \sin\theta_l
 $$
@@ -107,7 +106,7 @@ $$
 
 - 均匀采样变换到球坐标采样
 
-假设计算伪随机生成 $[0,1]\cross [0,1]$ 的随机数 $x,y$，作为球坐标 $(\phi_l,\theta_l)=(\phi_{l_k},\theta_{l_k})$ 的概率，可列
+假设计算伪随机生成 $[0,1]\times [0,1]$ 的随机数 $x,y$，作为球坐标 $(\phi_l,\theta_l)=(\phi_{l_k},\theta_{l_k})$ 的概率，可列
 $$
 \begin{cases}
 P_{\boldsymbol{l}}(\phi_{l_k})=\frac{1}{2\pi}\cdot \phi_{l_k}=x \\
@@ -188,7 +187,7 @@ $$
 $$
 p_{\boldsymbol{h}}(\phi_h,\theta_h)=D(\boldsymbol{h})\cos\theta_h=D(\phi_h,\theta_h)\cos\theta_h
 $$
-计算机中的采样只能通过伪随机数生成服从均匀分布 $ U [0,1]$ 的采样点，需要通过变换转到服从其他分布的采样点 [[2]](#[2])。对于本文过程如下：在 $[0,1]\cross[0,1]$ 进行均匀采样得到 $(x,y)$，用以表示采样点 $\boldsymbol{h}_k(\phi_{h_k},\theta_{h_k})$ 的概率，即 
+计算机中的采样只能通过伪随机数生成服从均匀分布 $ U [0,1]$ 的采样点，需要通过变换转到服从其他分布的采样点 [[2]](#[2])。对于本文过程如下：在 $[0,1]\times[0,1]$ 进行均匀采样得到 $(x,y)$，用以表示采样点 $\boldsymbol{h}_k(\phi_{h_k},\theta_{h_k})$ 的概率，即 
 $$
 P_k(\boldsymbol{h}_k)=P_k(\phi_{h_k},\theta_{h_k})=(x,y)
 $$
@@ -372,7 +371,7 @@ $$
 $$
 因此雅可比行列式有：
 $$
-\left|\frac{\part \phi_l}{\part \phi_h}\cdot \frac{\part \theta_l}{\part\theta_h}-\frac{\part \phi_l}{\part\theta_h }\cdot \frac{\part\theta_l}{\part \phi_h}\right|=\left|1\cross(-2)-0\cross 0\right|=2
+\left|\frac{\part \phi_l}{\part \phi_h}\cdot \frac{\part \theta_l}{\part\theta_h}-\frac{\part \phi_l}{\part\theta_h }\cdot \frac{\part\theta_l}{\part \phi_h}\right|=\left|1\times(-2)-0\times 0\right|=2
 $$
 
 代入有：
@@ -394,7 +393,7 @@ $$
 $$
 p_{\boldsymbol{l}}(\boldsymbol{l})=\frac{p_\boldsymbol{h}(\boldsymbol{h})}{4(\boldsymbol{v}\cdot \boldsymbol{h})}=\frac{D(\boldsymbol{h})\cdot \cos\theta_h}{4(\boldsymbol{v}\cdot \boldsymbol{h})}
 $$
-$\eqref{BRDF MC}$ 中的 $p(\boldsymbol{l}_k)$ 即为上式的 $p_{\boldsymbol{l}}(\boldsymbol{l})$。假设第 $k$ 次均匀分布采样点为 $(x_k,y_k)\in[0,1]\cross[0,1]$，经过 $\eqref{Blinn Phong Sampled Microface Normal}$ 与 $\eqref{GGX Sampled Microface Normal}$ 可以得到该采样点在 NDF 上对应的微表面法线 $\boldsymbol{h}_k$ ，有：
+$\eqref{BRDF MC}$ 中的 $p(\boldsymbol{l}_k)$ 即为上式的 $p_{\boldsymbol{l}}(\boldsymbol{l})$。假设第 $k$ 次均匀分布采样点为 $(x_k,y_k)\in[0,1]\times[0,1]$，经过 $\eqref{Blinn Phong Sampled Microface Normal}$ 与 $\eqref{GGX Sampled Microface Normal}$ 可以得到该采样点在 NDF 上对应的微表面法线 $\boldsymbol{h}_k$ ，有：
 $$
 p(\boldsymbol{l}_k)=\frac{D(\boldsymbol{h}_k)\cdot \cos\theta_{h_k}}{4(\boldsymbol{v}\cdot \boldsymbol{h}_k)}=\frac{D(\boldsymbol{h}_k)\cdot \boldsymbol{h}_k\cdot \boldsymbol{n}}{4(\boldsymbol{v}\cdot \boldsymbol{h}_k)}
 $$
