--- a/text-notes/pbrt/3.2 Rounding Error of Float-Point Arithmetic.md
+++ b/text-notes/pbrt/3.2 Rounding Error of Float-Point Arithmetic.md
@@ -34,8 +34,9 @@
 
 符号定义：使用 $\oplus,\ominus,\otimes,\oslash, sqrt$ 表示数学运算 $+,-,\times,/,\sqrt{\space \space \space}$ 对应的浮点数运算，有
 
-​                              $$a\oplus b = round(a+b) \\ a\ominus b=round(a-b) \\ a\otimes b = round(a\times b) \\ a \oslash b = round(a/b) \\ sqrt(a) = round(\sqrt{a})$$
-
+$$
+a\oplus b = round(a+b) \\ a\ominus b=round(a-b) \\ a\otimes b = round(a\times b) \\ a \oslash b = round(a/b) \\ sqrt(a) = round(\sqrt{a})
+$$
 其中，$round(x)$ 表示将一个实数舍入到最近的浮点数。
 
 我们可以用实数的区间来表示浮点数运算带来的误差范围，以浮点数加法为例，
@@ -44,7 +45,9 @@ $$a\oplus b = round(a+b)\subset (a+b)(1\pm \epsilon)=[(a+b)(1-\epsilon),(a+b)(1+
 
 浮点加法引入的误差不会超过 $a+b$ 的 floating-point 间隔的一半，即 ulp 的一半。对于 32 位浮点数，我们可以使用  ulp 定义 $a+b$ 的浮点数间隔： $(a+b)2^{-23}$ 。因此，一半间隔为 $(a+b)2^{-24}$，令 $\epsilon_m=2^{-24}$ ，有
 
-​           $$a\oplus b = round(a+b)\subset (a+b)(1\pm \epsilon_m)=[(a+b)(1-\epsilon_m),(a+b)(1+\epsilon_m)]$$
+$$
+a\oplus b = round(a+b)\subset (a+b)(1\pm \epsilon_m)=[(a+b)(1-\epsilon_m),(a+b)(1+\epsilon_m)]
+$$
 
 > 这里的浮点数间隔与第1部分的ulp定义略有不同，但结果一样。例如区间下限为 $(a+b)-(a+b)\epsilon_m$，$(a+b)\epsilon_m$ 将 $(a+b)$ 的尾数右移24位(因为阶码要与(a+b)对齐才可运算)，正好将隐含的最高位移动到23位尾数的后移一位，即舍入位。误差大小看的就是舍入位。
 
@@ -62,7 +65,9 @@ $$2\otimes x,x\otimes 2$$ 是没有误差的，更一般地，任何乘法或除
 
 将浮点运算结果看作经过扰动的实数运算结果：$\tilde{a}=a\pm \delta_a=a(1\pm \delta_r)$。以运算 $r=(((a+b)+c)+d)$ 为例，
 
-$$\begin{align} (((a\oplus b)\oplus c)\oplus d) &\subset ((((a+b)(1\pm \epsilon_m)+c)(1+\epsilon_m)+d)(1\pm \epsilon_m)) \\ &=(a+b)(1\pm \epsilon_m)^3+c(1\pm \epsilon_m)^2+d(1\pm \epsilon_m)  \\ &\subset (a+b)(1\pm 4\epsilon_m)+c(1\pm 3\epsilon_m)+d(1\pm 2\epsilon_m) \\ &= a+b+c+d+[\pm 4\epsilon_m (a+b)\pm 3\epsilon_m c \pm 2\epsilon_m d] \end{align}$$
+$$
+\begin{align} (((a\oplus b)\oplus c)\oplus d) &\subset ((((a+b)(1\pm \epsilon_m)+c)(1+\epsilon_m)+d)(1\pm \epsilon_m)) \\ &=(a+b)(1\pm \epsilon_m)^3+c(1\pm \epsilon_m)^2+d(1\pm \epsilon_m)  \\ &\subset (a+b)(1\pm 4\epsilon_m)+c(1\pm 3\epsilon_m)+d(1\pm 2\epsilon_m) \\ &= a+b+c+d+[\pm 4\epsilon_m (a+b)\pm 3\epsilon_m c \pm 2\epsilon_m d] \end{align}
+$$
 
 > 因为 $\epsilon_m$ 非常小，因此  $\epsilon_m$ 的次幂可以放大为加法，有以下不等式
 >
@@ -98,8 +103,9 @@ $$a(1\pm \gamma_i)\otimes b(1\pm \gamma_j) \subset ab(1\pm r_{i+j+1})$$
 
 - 加法运算 
 
-  $(a\pm \delta_a)\oplus (b\pm \delta_b)=a+b+[\pm\delta_a\pm\delta_b\pm(a+b)\gamma_1\pm\gamma_1\delta_a\pm\gamma_1\delta_b]$
-
+  $$
+  (a\pm \delta_a)\oplus (b\pm \delta_b)=a+b+[\pm\delta_a\pm\delta_b\pm(a+b)\gamma_1\pm\gamma_1\delta_a\pm\gamma_1\delta_b]
+  $$
   运算结果的绝对误差可被 bound 为 $err = \delta_a+\delta_b+\gamma_1(|a+b|+\delta_a+\delta_b)$
 
 ### 求交运算中的浮点数误差处理
@@ -110,8 +116,9 @@ $$a(1\pm \gamma_i)\otimes b(1\pm \gamma_j) \subset ab(1\pm r_{i+j+1})$$
 
 回想光线与 Bounding Box 求交计算，对于垂直于 $x$ 轴的 slab，$t=\frac{x-O_x}{\mathbf{d}_x}$，进行浮点数运算误差分析有
 
-​							$t=(x\ominus O_x)\otimes (1\oslash \mathbf{d}_x)\subset \frac{x-O_x}{\mathbf{d}_x}(1\pm \epsilon)^3$
-
+$$
+t=(x\ominus O_x)\otimes (1\oslash \mathbf{d}_x)\subset \frac{x-O_x}{\mathbf{d}_x}(1\pm \epsilon)^3
+$$
 因此该运算结果的 Error Interval 为 $t(1\pm \gamma_3)$
 
 当 $t_{min},t_{max}$ 的 Error Interval 重叠时，则有可能出现上述错误判断结果，如下图所示
@@ -120,7 +127,9 @@ $$a(1\pm \gamma_i)\otimes b(1\pm \gamma_j) \subset ab(1\pm r_{i+j+1})$$
 
 为了不丢弃正确的求交结果，一种保守做法：比较时用 $t_{max}$ 的 Error Interval 的上限与 $t_{min}$ 的 Error Interval 的下限进行比较，也可直接将 $t_{max}$ 的 Error Bound 的上限提升为两个 $\gamma_3$，而 $t_{min}$ 不采取额外操作。即
 
-​									$t_{max}(1+ 2*\gamma_3) > t_{min}$
+$$
+t_{max}(1+ 2*\gamma_3) > t_{min}
+$$
 
 #### 2. Robust Triangle Intersections
 
@@ -140,8 +149,9 @@ $$a(1\pm \gamma_i)\otimes b(1\pm \gamma_j) \subset ab(1\pm r_{i+j+1})$$
 
 接下来，我们对交点的浮点数计算的误差进行分析。假设我们已经求得参数化交点 $t_{hit}$ ，且该参数携带绝对误差 $\delta_t$。根据光线方程有交点 $P=O+t_{hit}\mathbf{d}$。这里我们以交点的 $x$ 坐标为例，
 
-​										$\begin{align} x&=O_x\oplus (t_{hit}\pm \delta_t)\otimes \mathbf{d}_x \\ &\subset O_x\oplus (t_{hit}\pm \delta_t)\mathbf{d}_x(1\pm \gamma_1) \\ &\subset O_x(1\pm \gamma_1)+(t_{hit}\pm \delta_t)\mathbf{d}_x(1\pm \gamma_2) \\ &= O_x+t_{hit}\mathbf{d}_x+[\pm O_x\gamma_1 \pm \delta_t\mathbf{d}_x\pm t_{hit}\mathbf{d}_x \gamma_2 \pm\delta_t\mathbf{d}_x\gamma_2] \end{align}$
-
+$$
+\begin{align} x&=O_x\oplus (t_{hit}\pm \delta_t)\otimes \mathbf{d}_x \\ &\subset O_x\oplus (t_{hit}\pm \delta_t)\mathbf{d}_x(1\pm \gamma_1) \\ &\subset O_x(1\pm \gamma_1)+(t_{hit}\pm \delta_t)\mathbf{d}_x(1\pm \gamma_2) \\ &= O_x+t_{hit}\mathbf{d}_x+[\pm O_x\gamma_1 \pm \delta_t\mathbf{d}_x\pm t_{hit}\mathbf{d}_x \gamma_2 \pm\delta_t\mathbf{d}_x\gamma_2] \end{align}
+$$
 上述运算的绝对误差为：$\gamma_1|O_x|+\delta_t(1\pm \gamma_2)|\mathbf{d}_x|+\gamma_2|t_{hit}\mathbf{d}_x|$。
 
 上式中，贡献误差的各项($O_x,\mathbf{d}_x$ 和 $t_{hit}\mathbf{d}_x$)对于不同的交点有不同的数量级。因此交点计算过程有 catastrophic cancellation的风险。并且在计算交点的参数化数值 $t$ 时，会涉及很多浮点运算，同样假设 n 次浮点运算，$t$ 的绝对误差 $\delta_t$ 的数量级至少为 $\gamma_n t$。这些因素可能会导致所求交点具有相当大的误差。接下来将说明几种减小交点携带的误差的方法。
@@ -150,32 +160,34 @@ $$a(1\pm \gamma_i)\otimes b(1\pm \gamma_j) \subset ab(1\pm r_{i+j+1})$$
 
 我们希望计算交点只带有少量 ulps 大小的误差，而不是使用参数化的光线方程计算导致的数以百计的 ulps 大小的误差。使用 Re-Intersection 来得到一个更小误差的交点，以第一次(即上述方法)所求交点作为起点，发出第二光线，求第二光线与平面的交点，即第二交点(重复交点)。由于第二交点与第二光线的起点非常接近，因此 $t_{hit2}$ 接近 $0$，因此 $t_{hit2}$ 的绝对误差的数量级会非常小，因此第二交点会更接近平面。此外，由于第二光线的起点与交点数量级相近，绝对误差中 $\gamma_1|O_x|$ 项不会引入较大的额外误差。
 
-做一次 Re-Intersection 需要的计算开销较大，而且计算得到的 $t_{hit2}$ 仍会带有误差。另一个高效的方法是通过将交点投影回表面，这些将交点投影到表面的误差非常小。注意，这里的误差没有将切线方向的误差考虑在内，而只是考虑那些可能使得交点落在表面下方的误差。下面以光线与球面的交点为例，假设已经求得交点 $P$，通过以球半径来缩放该交点坐标将该点投影回球面，得到新点 $P'=(x',y',z')$。
-
-​									$$x'=x\frac{r}{\sqrt{x^2+y^2+z^2}}$$
+做一次 Re-Intersection 需要的计算开销较大，而且计算得到的 $t_{hit2}$ 仍会带有误差。另一个高效的方法是通过将交点投影回表面，这些将交点投影到表面的误差非常小。注意，这里的误差没有将切线方向的误差考虑在内，而只是考虑那些可能使得交点落在表面下方的误差。下面以光线与球面的交点为例，假设已经求得交点 $P$，通过以球半径来缩放该交点坐标将该点投影回球面，得到新点 $P'=(x',y',z'),$ $x'=x\frac{r}{\sqrt{x^2+y^2+z^2}}$
 
 对应的浮点运算为，
 
-$$\begin{align} x' &=x\otimes r \oslash sqrt((x\otimes x)\oplus (y\otimes y)\oplus(z\otimes z)) \\ &\subset \frac{xr(1\pm \epsilon_m)^2}{\sqrt{x^2(1\pm \epsilon_m)^3+y^2(1\pm \epsilon_m)^3+z^2(1\pm \epsilon_m)^2}(1\pm \epsilon_m)} \\ &\subset \frac{xr(1\pm \gamma_2)}{\sqrt{x^2(1\pm \gamma_3)+y^2(1\pm \gamma_3)+z^2(1\pm \gamma_2)}(1\pm \gamma_1)} \\&\subset \frac{xr(1\pm \gamma_2)}{\sqrt{(x^2+y^2+z^2)(1\pm  \gamma_4)}(1\pm \gamma_1)} \\ &= \frac{xr(1\pm \gamma_2)}{\sqrt{(x^2+y^2+z^2)}\sqrt{(1\pm \gamma_4)}(1\pm \gamma_1)} \\ &\subset \frac{xr}{\sqrt{(x^2+y^2+z^2)}}(1\pm \gamma_5) \\ &= x'(1\pm \gamma_5) \end{align}$$
-
+$$
+\begin{align} x' &=x\otimes r \oslash sqrt((x\otimes x)\oplus (y\otimes y)\oplus(z\otimes z)) \\ &\subset \frac{xr(1\pm \epsilon_m)^2}{\sqrt{x^2(1\pm \epsilon_m)^3+y^2(1\pm \epsilon_m)^3+z^2(1\pm \epsilon_m)^2}(1\pm \epsilon_m)} \\ &\subset \frac{xr(1\pm \gamma_2)}{\sqrt{x^2(1\pm \gamma_3)+y^2(1\pm \gamma_3)+z^2(1\pm \gamma_2)}(1\pm \gamma_1)} \\&\subset \frac{xr(1\pm \gamma_2)}{\sqrt{(x^2+y^2+z^2)(1\pm  \gamma_4)}(1\pm \gamma_1)} \\ &= \frac{xr(1\pm \gamma_2)}{\sqrt{(x^2+y^2+z^2)}\sqrt{(1\pm \gamma_4)}(1\pm \gamma_1)} \\ &\subset \frac{xr}{\sqrt{(x^2+y^2+z^2)}}(1\pm \gamma_5) \\ &= x'(1\pm \gamma_5) \end{align}
+$$
 因此，投影点的 $x$ 坐标的绝对误差由 $\gamma_5|x'|$ 界定，每个维度不会超过 2.5 个ulps的误差
 
 ##### 参数化计算
 
 另一个高效计算低误差交点的方法是使用几何的参数化表示来计算较为精度的交点。例如：光线与三角形求交中，三个 edge functions 的值为 $e_0,e_1,e_2$，如果 $e_0,e_1,e_2$ 的符号相同，表示有交点。并且这三个 edge functions 的值可用来计算重心坐标 (barycentric coordinates) 
 
-​								$$b_i=\frac{e_i}{e_0+e_1+e_2}$$
-
+$$
+b_i=\frac{e_i}{e_0+e_1+e_2}
+$$
 三角形顶点的属性(包括顶点坐标)可以沿着三角面进行插值：$v'=b_0v_0+b_1v_1+b_2v_2$。
 
 分析以这种方式得到交点的坐标所引入的误差。首先计算 $d=\frac{1}{e_0+e_1+e_2}$，对应浮点数运算为
 
-​								$$\begin{align} d&=1\oslash (e_0\oplus e_1\oplus e_2) \\ &\subset \frac{1}{(e_0+e_1)(1\pm \epsilon_m)^2+e_2(1\pm \epsilon_m)}(1\pm \epsilon_m) \\ &\subset \frac{1}{(e_0+e_1+e_2)(1\pm \epsilon_m)^2}(1\pm \epsilon_m) \\ &\subset \frac{1}{e_0+e_1+e_2}(1\pm \gamma_3) \end{align}$$
-
+$$
+\begin{align} d&=1\oslash (e_0\oplus e_1\oplus e_2) \\ &\subset \frac{1}{(e_0+e_1)(1\pm \epsilon_m)^2+e_2(1\pm \epsilon_m)}(1\pm \epsilon_m) \\ &\subset \frac{1}{(e_0+e_1+e_2)(1\pm \epsilon_m)^2}(1\pm \epsilon_m) \\ &\subset \frac{1}{e_0+e_1+e_2}(1\pm \gamma_3) \end{align}
+$$
 下面只考虑 $x$ 坐标的插值有，
 
-​								$$\begin{align} x'&=((e_0\otimes x_0)\oplus (e_1\otimes x_1)\oplus (e_2\otimes x_2))\otimes d \\ &\subset (e_0x_0(1\pm \epsilon_m)^3+e_1x_1(1\pm \epsilon_m)^3+e_2x_2(1\pm \epsilon_m)^2)d(1\pm \epsilon_m) \\ &\subset (e_0x_0(1\pm \gamma_4)+e_1x_1(1\pm \gamma_4)+e_2x_2(1\pm \gamma_3))d \\ &\subset \frac{e_0x_0(1\pm \gamma_7)+e_1x_1(1\pm \gamma_7)+e_2x_2(1\pm \gamma_6)}{e_0+e_1+e_2} \\ &= b_0x_0(1\pm \gamma_7)+b_1x_1(1\pm \gamma_7)+b_2x_2(1\pm \gamma_6) \\&= (b_0x_0+b_1x_1+b_2x_2)+(\pm b_0\gamma_7\pm b_1\gamma_7\pm b_2\gamma_6) \end{align}$$
-
+$$
+\begin{align} x'&=((e_0\otimes x_0)\oplus (e_1\otimes x_1)\oplus (e_2\otimes x_2))\otimes d \\ &\subset (e_0x_0(1\pm \epsilon_m)^3+e_1x_1(1\pm \epsilon_m)^3+e_2x_2(1\pm \epsilon_m)^2)d(1\pm \epsilon_m) \\ &\subset (e_0x_0(1\pm \gamma_4)+e_1x_1(1\pm \gamma_4)+e_2x_2(1\pm \gamma_3))d \\ &\subset \frac{e_0x_0(1\pm \gamma_7)+e_1x_1(1\pm \gamma_7)+e_2x_2(1\pm \gamma_6)}{e_0+e_1+e_2} \\ &= b_0x_0(1\pm \gamma_7)+b_1x_1(1\pm \gamma_7)+b_2x_2(1\pm \gamma_6) \\&= (b_0x_0+b_1x_1+b_2x_2)+(\pm b_0\gamma_7\pm b_1\gamma_7\pm b_2\gamma_6) \end{align}
+$$
 因此这种插值方式的绝对误差可被界定为 $\gamma_7(|b_0x_0|+|b_1x_1|+|b_2x_2|)$。
 
 #### 4. Robust Spawned Ray Origins
@@ -208,30 +220,37 @@ $$\begin{align} x' &=x\otimes r \oslash sqrt((x\otimes x)\oplus (y\otimes y)\opl
 
 首先计算将三角形变换到 ray coordinate 引入的误差。给定光线起点 $O$，方向 $\mathbf{d}$，一个顶点 $P$，变换后的 $z$ 坐标为 
 
-​									$z=(1\oslash \mathbf{d}_z)\otimes (P_z\ominus O_z) $。
-
-使用上述误差分析方法有，对于三角形顶点 $P_i$ 的坐标 $z_i$，绝对误差可被界定为 $\gamma_3|z_i|$。因此任意 $z$ 坐标的误差上限为 									$\delta_z=\gamma_3 \underset{i}{max}|z_i|$。
-
+$$
+z=(1\oslash \mathbf{d}_z)\otimes (P_z\ominus O_z) 
+$$
+使用上述误差分析方法有，对于三角形顶点 $P_i$ 的坐标 $z_i$，绝对误差可被界定为 $\gamma_3|z_i|$。因此任意 $z$ 坐标的误差上限为 
+$$
+\delta_z=\gamma_3 \underset{i}{\max}|z_i|
+$$
 下面给出变换后的 $x_i,y_i$ 携带的绝对误差，
 
-​									$\delta_x=\gamma_5(\underset{i}{max}|x_i|+\underset{i}{max}|z_i|)$
-
-​									$\delta_y=\gamma_5(\underset{i}{max}|y_i|+\underset{i}{max}|z_i|)$
-
+$$
+\delta_x=\gamma_5(\underset{i}{\max}|x_i|+\underset{i}{\max}|z_i|) \\
+\delta_y=\gamma_5(\underset{i}{\max}|y_i|+\underset{i}{\max}|z_i|)
+$$
 接下来是 edge function 的计算所引入的误差，
 
-​									$\begin{align}&e_0=(x_1\otimes y_2)\ominus(y_1\otimes x_2) \\ &e_1=(x_2\otimes y_0)\ominus(y_2 \otimes x_0) \\&e_2=(x_0\otimes y_1)\ominus (y_0\otimes x_1) \end{align}$
+$$
+\begin{align}&e_0=(x_1\otimes y_2)\ominus(y_1\otimes x_2) \\ &e_1=(x_2\otimes y_0)\ominus(y_2 \otimes x_0) \\&e_2=(x_0\otimes y_1)\ominus (y_0\otimes x_1) \end{align}
+$$
+edge function 被 bound 为 $(\underset{i}{\max}|x_i|+\delta_x)(\underset{i}{\max}|y_i|+\delta_y)(1\pm \epsilon_m)$，其绝对误差为
 
-edge function 被 bound 为 $(\underset{i}{max}|x_i|+\delta_x)(\underset{i}{max}|y_i|+\delta_y)(1\pm \epsilon_m)$，其绝对误差为
-
-​									$\delta_{xy}=\gamma_2\underset{i}{max}|x_i|\underset{i}{max}|y_i|+\delta_y\underset{i}{max}|x_i|+\delta_x\underset{i}{max}|y_i|+...$
-
+$$
+\delta_{xy}=\gamma_2\underset{i}{\max}|x_i|\underset{i}{\max}|y_i|+\delta_y\underset{i}{\max}|x_i|+\delta_x\underset{i}{\max}|y_i|+...
+$$
 忽略掉 $\gamma,\delta$ 相乘的高阶项，edge function 的绝对误差可以被 bound 为 
 
-​									$\delta_e=2(\gamma_2\underset{i}{max}|x_i|\underset{i}{max}|y_i|+\delta_y\underset{i}{max}|x_i|+\delta_x\underset{i}{max}|y_i|)$
-
+$$
+\delta_e=2(\gamma_2\underset{i}{\max}|x_i|\underset{i}{\max}|y_i|+\delta_y\underset{i}{\max}|x_i|+\delta_x\underset{i}{\max}|y_i|)
+$$
 最终 $t$ 的误差取所有 $e_i$ 的误差最大值
 
-​									$\delta_t=3(\gamma_3\underset{i}{max}|e_i|\underset{i}{max}|z_i|+\delta_e\underset{i}{max}|z_i|+\delta_z\underset{i}{max}|e_i|)$
-
+$$
+\delta_t=3(\gamma_3\underset{i}{\max}|e_i|\underset{i}{\max}|z_i|+\delta_e\underset{i}{\max}|z_i|+\delta_z\underset{i}{\max}|e_i|)
+$$
 如果 $t\leq \delta_t$ ，保守返回无交点结果，这样就可以排除掉光线起点之后的交点
