--- a/text-notes/面试/算法.md
+++ b/text-notes/面试/算法.md
@@ -1,4 +1,4 @@
-##### 1. 寻找两个有序数组的中位数
+##### 1. [寻找两个正序数组的中位数](https://leetcode.cn/problems/median-of-two-sorted-arrays/)
 
 大小分为 m、n 的正序数组 A、B，请找出两个有序数组的中位数，m+n>=1
 
@@ -6,18 +6,18 @@
 
 已知两个数组长度为 m、n，那么当 m+n 为奇数时中位数位于第 (m+n)/2，为偶数时，中位数是第 (m+n)/2 和 (m+n)/2+1 的平均值。因此本算法可以转化为长度为奇数时，获取第 k 小元素的问题；为偶数时获取第 k、k+1 元素的平均值。
 
-- 复杂度 O(m+n) 的简单算法：遍历有序数组直至到第 k 个位置，或者合并两个有序数组，再返回第 k 个位置。
-- 复杂度 O(log(m+n))：利用二分查找的思想。如果 A[k/2-1] <= B[k/2-1]，那么比 A[k/2-1] 小的元素个数最多有 k-2 个，因此数组 A[0]~A[k/2-1] 部分肯定没有中位数，因此可以**一次排除掉 k/2 个元素**。A[k/2-1] > B[k/2-1] 时同理。之后再对剩余数组进行排除。
+- 复杂度 $O(m+n)$ 的简单算法：遍历有序数组直至到第 k 个位置，或者合并两个有序数组，再返回第 k 个位置。
+- 复杂度 $O(log_2(m+n))$：利用二分查找的思想。如果 A[k/2-1] <= B[k/2-1]，那么比 A[k/2-1] 小的元素个数最多有 k-2 个，因此数组 $[0,k/2-1]$ 部分肯定没有中位数，因此可以**一次排除掉 k/2 个元素**。A[k/2-1] > B[k/2-1] 时同理。之后再对剩余数组进行排除。
 
 ###### 基于二分查找的算法步骤
 
-设置数组的两个指针 p、q 分别指向 A、B 数组，两个偏移量 sa、sb 分别表示排除过后数组 A、B 的起始位值。p、q 起始为 0，sa、sb 初始为 0。查找第 k 小元素的过程如下：
+设置数组的两个指针 p、q 分别指向 A、B 数组，两个偏移量 sa、sb 分别表示排除过后数组 A、B 的起始位置。p、q 起始为 0，sa、sb 初始为 0。查找第 k 小元素的过程如下：
 
-1. p、q 相对当前有效数组偏移一个 step 长度，即 p=sa+step, q=sb+step。如果 `step=k/2-1`，p、q 的目标位置超出数组边界，则缩小范围至最后一个元素位置，即 step=min(m-sa-1, n-sb-1)。
+1. 定位数组的 k/2-1 元素：通过对当前剩余数组的起始位置 sa、sb 施加一个偏移量 step 来得到 k/2-1 元素，即 p=sa+step, q=sb+step。默认 `step=k/2-1`，但如果当前剩余数组的长度不足 k/2，则缩小范围至最后一个元素位置，即 `step=min(m-sa-1, n-sb-1)`。
 
-2. 如果 A[p] <= B[q]，则排除掉 A[sa]~A[p] 部分，并更新 k 值，即 `k-=p-sa+1, sa+=1 `。
+2. 如果 A[p] <= B[q]，则排除掉数组 A 的 $[sa,p]$ 部分，并更新 k 值，即 `k-=p-sa+1, sa+=1 `。
 
-3. 如果 A[p] > B[q]，则排除掉 B[sb]~B[q] 部分，并更新 k 值，即 `k-=q-sb+1, sb+=1`。
+3. 如果 A[p] > B[q]，则排除掉数组 B 的 $[sb,q]$ 部分，并更新 k 值，即 `k-=q-sb+1, sb+=1`。
 
 4. 重复 1、2、3 步骤直至 k==1 或者有一个数组元素被全部排除。
 
@@ -25,7 +25,7 @@
 
    - 否则，返回不为空数组的第 k 个元素。
 
-当 m+n 为偶数时，需要寻找第 k 小元素与第 k+1 小元素，只要调用两次寻找 k 小元素算法即可。当 m+n==1 时，直接返回唯一的元素。
+当 m+n 为偶数时，需要寻找第 k 小元素与第 k+1 小元素，只要调用两次寻找 k/k+1 小元素算法即可。
 
 ##### 2. 最长回文子串
 
@@ -33,49 +33,33 @@
 
 ###### 解法思路
 
-第一种解法遍历字符串，对当前字符进行回溯判断是否为回文，要判断两种回文情况，一种是奇数长度回文、另一种是偶数长度回文。当前所得回文串长度大于记录的最大回文串长度，则更新最大回文串。
+第一种解法遍历字符串，对当前字符进行回溯判断是否为回文，要判断两种回文情况，一种是奇数长度回文、另一种是偶数长度回文。当前所得回文串长度大于记录的最大回文串长度，则更新最大回文串。时间复杂度 $O(n^2)$
 
-第二种解法是使用 DP，设置二维数组 dp，dp\[i\][j] 表示 i~j 是否为回文串，可知有如下规则
+第二种解法是使用 DP，设置二维数组 dp，dp\[i\][j] 表示 $[i,j]$ 部分是否为回文串，可知有如下规则
 
 ```c++
 dp[i][j] = dp[i+1][j-1] && s[i] == s[j]
 ```
 
- 同时当 i>j 时，dp\[i\][j]=false。首先初始化 dp\[i\][i]=true，其它为 false，较长子串是否为回文串依赖于较短子串是否为回文串。因此遍历规则时长度由小到大，子串起始位置由开始到结尾。
+同时当 i>j 时，dp\[i\][j]=false。首先初始化 dp\[i\][i]=true，其它为 false，较长子串是否为回文串依赖于较短子串是否为回文串。因此遍历规则时长度由小到大，子串起始位置由开始到结尾。时间复杂度 $O(n^2)$
 
-##### 3. 最大面积
+##### 3. [盛最多水的容器](https://leetcode.cn/problems/container-with-most-water/)
 
-给定一个长度为 n 的整数数组 height 。有 n 条垂线，第 i 条线的两个端点是 (i, 0) 和 (i, height[i]) 。找出其中的两条线，使得它们与 x 轴共同构成的容器可以容纳最多的水（不能倾斜）。
+给定一个长度为 n 的整数数组 height 。有 n 条垂线，第 i 条线的两个端点是 (i, 0) 和 (i, height[i]) 。找出其中的两条线，使得它们与 x 轴共同构成的容器可以容纳最多的水（不能倾斜），如下图所示
+
+<img src="../../../source/images/算法.assets/question_11.jpg" alt="img" style="zoom:50%;" />
 
 ###### 解法思路
 
-第一反应是双层 for 循环，时间复杂度 O(n^2)。但有更好的解法，使用双指针 left、right 分别指向数组两端，计算 left 和 right 之间的面积，若大于当前记录的最大面积，则更新当前最大面积。比较 left、right 的高度大小，较小者向较大者移动，再次计算面积。按此遍历整个数组。
+第一反应是双层 for 循环，时间复杂度 $O(n^2)$。但有更好的解法，使用双指针 left、right 分别指向数组两端，计算 left 和 right 之间的面积，若大于当前记录的最大面积，则更新当前最大面积。比较 left、right 的高度大小，较小者向较大者移动，再次计算面积。按此遍历整个数组。
 
-###### 基于双指针的算法步骤
-
-设置 left、right 分别指向数组两端，最大面积 A 初始为 0，有如下算法步骤：
-
-1. 计算此时 left、right 之间的面积。取 left、right 对应高度的较小者，作为容器的实际高度，则面积为
-   ```c++
-   min(height[left],height[right])*(right-left)
-   ```
-
-   如果当前面积大于 A，则更新 A 值。
-
-2. 更新高度较小的指针
-
-   - 如果 height[left] <= height[right]，++left
-   - 如果 height[left] > height[right]，--right
-
-3. 执行上述步骤，直至 left >= right。
-
-##### 4. 查找所有三数之和为 0 的三元组
+##### 4. [三数之和](https://leetcode.cn/problems/3sum/)
 
 给你一个包含 n 个整数的数组 nums，判断 nums 中是否存在三个元素 a，b，c ，使得 a + b + c = 0 ？找出所有和为 0 且不重复的三元组。
 
 ###### 解法思路
 
-先对数组进行排序，再遍历数组元素。设置双指针，mid 指向当前遍历元素的后一个，end 指向数组最后一个。根据当前遍历元素与 mid、end 之后的正负关系来决定双指针的移动。对于三者之和为 0 时，加入结果列表，分别移动双指针后，再将**双指针移动至与之前指向元素不同的位置，来避免重复的三元组**（当前遍历元素不变的情况，想要相同只能是双指针的元素相同）。
+先对数组进行排序，再遍历数组元素。设置双指针，mid 指向当前遍历元素的后一个，end 指向数组最后一个。根据当前遍历元素与 mid、end 之间的正负关系来决定双指针的移动。对于三者之和为 0 时，加入结果列表，分别移动双指针后，再将**双指针移动至与之前指向元素不同的位置，来避免重复的三元组**（当前遍历元素不变的情况，想要相同只能是双指针的元素相同）。
 
 ###### 算法步骤
 
@@ -95,9 +79,11 @@ dp[i][j] = dp[i+1][j-1] && s[i] == s[j]
 
    - 如果和小于 0，则将 mid 向数值大的方向移动，++mid
 
+   - 重复以上步骤直至 mid >= end
+
 3. 重复 1、2 步骤直至数组遍历结束
 
-##### 5. 括号生成
+##### 5. [括号生成](https://leetcode.cn/problems/generate-parentheses/)
 
 数字 `n` 代表生成括号的对数，请你设计一个函数，用于能够生成所有可能的并且 **有效的** 括号组合。
 
@@ -118,17 +104,37 @@ dp[i][j] = dp[i+1][j-1] && s[i] == s[j]
 2. "(" 加入递归路径 permu，使用 open+1 进入下一层递归。（递归返回处，去除末尾元素）
 3. 如果当前递归路径中 close < open，则 ")" 加入递归路径，使用 close+1 进入下一层递归
 
-##### 6. 合并 k 个升序链表
+```c++
+void TraceChar(int open, int colse, int n, string permu, std::vector<string>& outRetList)
+{
+    if(open == n){
+        for(int i = 0; i < open-colse; ++i){
+        	permu.push_back(')');
+        }
+        outRetList.emplace_back(permu);
+        return;
+    }
+    permu.push_back('(');
+    TraceChar(open+1, colse, n, permu, outRetList);
+    permu.pop_back();
+    if(colse < open){
+        permu.push_back(')');
+        TraceChar(open, colse+1, n, permu, outRetList);
+    }
+}
+```
+
+##### 6. [合并K个升序链表](https://leetcode.cn/problems/merge-k-sorted-lists/)
 
 给你一个链表数组，每个链表都已经按升序排列。请你将所有链表合并到一个升序链表中，返回合并后的链表。
 
 ###### 解法思路
 
-合并两个升序链表作为基础操作，实现较为简单 O(n) 复杂度。最直接的做法是，将 k 个链表依次执行合并，第 i 次合并，目标链表长度为 i*n，因此 k 次合并的复杂度为 O(k^2 x n)。
+合并两个升序链表作为基础操作，实现较为简单 $O(n)$ 复杂度。最直接的做法是，将 k 个链表依次执行合并，第 i 次合并，目标链表长度为 i*n，因此 k 次合并的复杂度为 $O(k^2 \times n)$。
 
-为了降低复杂度，可以采用分治策略，即 k 个链表第一次进行两两合并，得到 k/2 个链表，继续进行两两合并，直至合并为 1 个链表。一共进行 logk 次合并，第一次合并复杂度为 2n，第二次为 4n，...，第 logk 次合并为 (logk)^2 x n=kn，因此时间复杂度为 O(kn x logk)。
+为了降低复杂度，可以采用**分治策略**，即 k 个链表第一次进行两两合并，得到 k/2 个链表，继续进行两两合并，直至合并为 1 个链表。一共进行 $\log_2k$ 次合并，第一次合并复杂度为 2n，第二次为 4n，...，第 logk 次合并为 $(\log_2k)^2 \times n=kn$，因此时间复杂度为 $O(kn \times \log_2k)$。
 
-##### 7. 下一个字典序更大的排列
+##### 7. [下一个排列](https://leetcode.cn/problems/next-permutation/)
 
 整数数组的 **下一个排列** 是指其整数的下一个字典序更大的排列。如果不存在下一个更大的排列，那么这个数组必须重排为字典序最小的排列（即，其元素按升序排列）。例如 [1,2,3]=>[1,3,2]，[3,2,1]=>[1,2,3]，[1,1,5]=>[1,5,1]
 
@@ -190,7 +196,7 @@ dp[i][j] = dp[i+1][j-1] && s[i] == s[j]
 
 要求 O(logn)，那么肯定使用二分查找。升序数组经过旋转，数组内部分有序，当使用二分法，将数组分为两部分时，至少有一部分是有序的。对于有序部分可以很快判断 target 是否在其范围内，如果在则继续在该有序部分查找。如果不在，则在另一部分查找。
 
-##### 10. 接雨水
+##### 10. [接雨水](https://leetcode.cn/problems/trapping-rain-water/)
 
 给定 `n` 个非负整数表示每个宽度为 `1` 的柱子的高度图，计算按此排列的柱子，下雨之后能接多少雨水。
 
@@ -207,9 +213,26 @@ rightMax=max(rightMax,height[right])
 
 - 如果 leftMax < rightMax，则可以确定 left 位置的雨水量 `leftMax-height[left]`，left 右移
 - 如果 leftMax > rightMax，则可以确定 right 位置的雨水量 `rightMax-height[right]`，right 左移
-- 如果 leftMax==rightMax，则可以确定 left 和 right 位置的雨水量，分别为  `leftMax-height[left]`、`rightMax-height[right]`，left 右移，right 左移
+- 如果 leftMax == rightMax，则可以确定 left 和 right 位置的雨水量，分别为  `leftMax-height[left]`、`rightMax-height[right]`，left 右移，right 左移
 
-##### 11. 全排列
+**第三种解法使用单调栈**：使用一个记录数组索引的单调递减栈。从左到右遍历数组，当前元素满足单调栈时则入栈；否则，当前元素 i 、栈顶 mid 与次顶 left 之间的水量计算为 `(i-left-1) * (minH-height[mid])`，其中 minH 为 i 与 left 二者较小值，并出栈直至满足单调递减栈。
+
+```c++
+stack<int> monoStack;
+int rainNum = 0;
+for(int i = 0; i < height.size(); ++i){
+    while(!monoStack.empty() && height[monoStack.top()] < height[i]){
+        int mid = monoStack.top();
+        monoStack.pop();
+        if(monoStack.empty()) break;
+        int left = monoStack.top();
+        rainNum += (i-left-1) * (std::min(height[left], height[i]) - height[mid]);
+    }
+    monoStack.push(i);
+}
+```
+
+##### 11. [全排列](https://leetcode.cn/problems/permutations/)
 
 给定一个不含重复数字的数组 `nums` ，返回其 *所有可能的全排列* 。例如
 
@@ -220,7 +243,21 @@ rightMax=max(rightMax,height[right])
 
 ###### 解法思路
 
-
+```c++
+void Permute(int depth, vector<int>& nums, vector<vector<int>>& pathList){
+    for(int i = depth; i < nums.size(); ++i){
+        if(depth == nums.size()-1){
+            pathList.emplace_back(nums);
+        }else{
+            if(i != depth)
+                std::swap(nums[i], nums[depth]);
+            Permute(depth+1, nums, pathList);
+            if(i != depth)
+                std::swap(nums[i], nums[depth]);
+        }
+    }
+}
+```
 
 ##### 12. 跳跃游戏
 
@@ -276,7 +313,7 @@ rightMax=max(rightMax,height[right])
 
 ##### 15. 子集
 
-给你一个整数数组 `nums` ，数组中的元素 **互不相同** 。返回该数组所有可能的子集（幂集）。解集 **不能** 包含重复的子集。你可以按 **任意顺序** 返回解集。例如
+给你一个整数数组 `nums` ，数组中的元素 **互不相同** 。返回该数组所有可能的子集（幂集）。解集**不能**包含重复的子集。你可以按 **任意顺序** 返回解集。例如
 
 ```
 输入：nums = [1,2,3]
@@ -299,4 +336,290 @@ void IterSubset(int start, const vector<int>& nums, vector<int>& path, vector<ve
     IterSubset(start+1, nums, path, subSetList);
 }
 ```
+
+##### 16. [最长递增子序列](https://leetcode.cn/problems/longest-increasing-subsequence/)
+
+给你一个整数数组 nums ，找到其中最长严格递增子序列的长度。子序列 是由数组派生而来的序列，删除（或不删除）数组中的元素而不改变其余元素的顺序。例如，[3,6,2,7] 是数组 [0,3,1,6,2,2,7] 的子序列。
+
+###### 解法思路
+
+**基于动态规划**：设置 dp 一维数组，dp[i] 表示前 i 个元素以 i 为结尾的最大上升子序列的长度。初始 dp 元素都为 1，状态转移有：从左到右遍历 nums 数组，遍历到 k 时有，`dp[k] = max(dp[i])+1, 0 <= i < k && nums[i]<nums[k]` 
+
+```c++
+for(int k = 1; k < nums.size(); ++k){
+    for(int i = 0; i < k; ++i){
+        if(nums[i] < nums[k] && dp[i] >= dp[k]){
+        	dp[k] = dp[i] + 1;
+        }
+    }
+}
+```
+
+时间复杂度为 $O(n^2)$
+
+**基于贪心+二分查找**：要使上升子序列尽可能长，则需要让序列上升得尽可能慢。维护一个数组 seq，seq[i] 表示长度为 i 的上升子序列的末尾元素的最小值。同时使用变量 maxLen 记录当前最大上升子序列的长度。
+
+初始时，maxLen = 1， seq[maxLen-1]=nums[0]。 1 =< i < nums.size() 遍历数组：
+
+- 如果 nums[i] == seq[maxLen-1]，跳过
+
+- 如果 nums[i] > seq[maxLen-1]，则表示当前遍历元素可以加入到上升子序列中，maxLen = maxLen+1
+- 如果 nums[i] < seq[maxLen-1]，则表示当前遍历元素可以作为某一长度上升子序列的更小末尾元素。首先从当前最大上升子序列 seq 中定位当前遍历元素的位置。seq 为递增数组，可以使用二分查找进行定位。找到 seq[k-1] < nums[i] < seq[k]，更新 seq[k] = nums[i]
+
+时间复杂度为 $O(n\log_2 n)$，二分查找部分代码如下，
+
+```c++
+int left = 0, right = maxLen-1;
+while(left <= right){
+    int mid = (left+right)/2;
+    if(seq[mid] < nums[i]){
+    	left = mid+1;
+    }else{
+    	right = mid-1;
+    }
+}
+seq[left] = nums[i];
+```
+
+##### 17. [打家劫舍 III](https://leetcode.cn/problems/house-robber-iii/)
+
+小偷又发现了一个新的可行窃的地区。这个地区只有一个入口，我们称之为 root 。除了 root 之外，每栋房子有且只有一个“父“房子与之相连，所有房屋组成二叉树。如果两个直接相连的房子在同一天晚上被打劫，房屋将自动报警。给定二叉树的 root 。返回在不触动警报的情况下 ，小偷能够盗取的最高金额 。如下图，
+
+<img src="../../../source/images/算法.assets/image-20220802094029120.png" alt="image-20220802094029120" style="zoom:33%;" />
+
+```
+输入: root = [3,2,3,null,3,null,1]
+输出: 7 
+解释: 小偷一晚能够盗取的最高金额 3 + 3 + 1 = 7
+```
+
+###### 解法思路
+
+由题目可知，具有父子关系的节点不能同时偷窃。因此对于一个子树，根节点 $o$，左右节点 $l$、$r$。偷窃 $o$，则 $l$、$r$ 不能被偷窃；不偷窃 $o$，则 $l$、$r$ 可以偷窃也可以不被偷窃。利用**动态规划思想**，假设 $f(x)$ 表示偷窃 $x$ 节点时的最高金额，$g(x)$ 表示不偷窃 $x$ 节点时的最高金额，则有如下关系：
+$$
+\begin{align}
+f(o)&=g(l)+g(r) \\
+g(o)&=\max\{f(l),g(l)\}+\max\{f(r), g(r)\}
+\end{align}
+$$
+因此可以按照上述状态转移方程，对二叉树进行后序遍历。可以用 std::pair<int, int> 来表示偷窃与不偷窃的最高金额，
+
+```c++
+// <select, unselect>
+std::pair<int, int> PostOrder(TreeNode* node)
+{
+    std::pair<int, int> maxLeft = {0, 0}, maxRight = {0, 0};
+    if(node->left){
+        maxLeft = PostOrder(node->left);
+    }
+    if(node->right){
+        maxRight = PostOrder(node->right);
+    }
+    std::pair<int, int> result;
+    result.first = maxLeft.second + maxRight.second + node->val;
+    result.second = std::max(maxLeft.first, maxLeft.second) + std::max(maxRight.first, maxRight.second);
+    return result;
+}
+```
+
+##### 18. [和为 K 的子数组](https://leetcode.cn/problems/subarray-sum-equals-k/)
+
+给你一个整数数组 `nums` 和一个整数 `k` ，请你统计并返回该数组中和为 `k` 的连续子数组的个数。
+
+###### 解法思路
+
+暴力解法：0=<start<nums.size() 遍历数组，每遍历一个元素，求以 start 为起点、和为 k 的连续子数组，由于数组元素可以为负，因此需要遍历 start<i<nums.size()。算法复杂度为 $O(n^2)$
+
+**前缀和+哈希 map**：可以利用前缀和来推导。假设 preSum[i] 表示前 i 个元素的和，那么 $[j+1,i]$ 子数组元素和为 preSum[i]-preSum[j]。当 preSum[i]-preSum[j]==k，即 `preSum[i]-k==preSum[j]` 时，$[j+1,i]$ 子数组的元素和为 k。算法复杂度 $O(n)$
+
+因此可以在遍历数组过程中，记录当前前 i 个元素和为 preSum，并且使用一个 hash map 记录已经遍历过的前缀和数值出现的次数。只要查询该 map，键值为 `preSum-k` 的数量，即为以当前元素结尾的、和为 k 的子数组数量。实现如下：
+
+```c++
+int seqNum = 0,  preSum = 0;
+std::unordered_map<int, int> preSumCountMap;
+preSumCountMap[0] = 1;
+for(int i = 0; i < nums.size(); ++i){
+    preSum += nums[i];
+    if(preSumCountMap.find(preSum-k) != preSumCountMap.end()){
+        seqNum += preSumCountMap[preSum-k];
+    }
+    ++preSumCountMap[preSum];
+}
+```
+
+##### 19. 数列相邻数差值的绝对值之和的最大/最小值
+
+https://www.nowcoder.com/practice/306ce234874a4cb1880e2f4310d8ce13
+
+##### 20. 起始数经过加/减1或乘2操作到目标数的步数
+
+https://blog.csdn.net/weixin_48419914/article/details/117485323
+
+##### 21. [在LR字符串中交换相邻字符](https://leetcode.cn/problems/swap-adjacent-in-lr-string/)
+
+
+
+##### 22. [柱状图中最大的矩形](https://leetcode.cn/problems/largest-rectangle-in-histogram/)
+
+给定 *n* 个非负整数，用来表示柱状图中各个柱子的高度。每个柱子彼此相邻，且宽度为 1 。求在该柱状图中，能够勾勒出来的矩形的最大面积。
+
+<img src="assets/image-20221023152614322.png" alt="image-20221023152614322" style="zoom: 33%;" />
+
+###### 解法思路
+
+对每个柱子计算以其高度构建的矩形的面积，其中最大者即为所求最大面积。对于以某个柱子高度构建的矩形的左右边界：该柱子左侧最近的小于其高度的柱子，以及右侧最近的小于其高度的柱子，这个中间范围的宽即为矩形宽。
+
+**使用单调递增栈来求左右边界**：设置数组 left、right 来记录每个柱子的左右边界，设置记录数组索引的单调递增栈 mono。从左到右遍历高度数组，`i` 指向当前元素：
+
+- 如果当前元素小于栈顶元素，反复执行以下步骤，直至栈空或者满足递增约束
+- - 当前栈顶的右边界 `right[mono.top()]=i`，出栈
+- 经过以上处理，当前元素满足递增栈约束。
+  - 如果栈空，则当前元素的左边界设置为 -1， `left[i] = -1`
+  - 栈非空，有当前元素大于栈顶元素，则当前元素左边界为 `left[i] = mono.top()`
+  - 当前元素入栈
+
+已知每个柱子的左右边界，依次求其对应矩形的面积，得到最大面积
+
+```c++
+vector<int> left(heights.size()), right(heights.size(), heights.size());
+stack<int> monoStack;
+for(int i = 0; i < heights.size(); ++i){
+    while(!monoStack.empty() && heights[monoStack.top()] > heights[i]){
+        right[monoStack.top()] = i;
+        monoStack.pop();
+    }
+    left[i] = monoStack.empty() ? -1 : monoStack.top();
+    monoStack.push(i);
+}
+int maxArea = 0;
+for(int i = 0; i < heights.size(); ++i){
+    int curArea = (right[i]-left[i]-1)*heights[i];
+    if(maxArea < curArea) maxArea = curArea;
+}
+```
+
+##### 23. [去除重复字母](https://leetcode.cn/problems/remove-duplicate-letters/)
+
+给你一个字符串 `s` ，请你去除字符串中重复的字母，使得每个字母只出现一次。需保证 **返回结果的字典序最小**（要求不能打乱其他字符的相对位置）
+
+###### 解法思路
+
+从左往右，字母的字典序的权重递减。假设有 s[i]>s[i+1]，那么无论之后的字符如何去除，去除 s[i] 得到的字符串一定要小于去除 s[i+1] 后的字符串。因此采用单调递增栈来找到这种关键字符。同时注意要求：
+
+- 去除重复字符，因此需要首先记录字符出现次数
+- 已经出现在单调栈中的字符不能再入栈
+
+使用一个单调递增栈来记录剩下的字符，从左到右依次遍历字符串，i 指向当前元素：
+
+- 如果栈中存在当前字符，直接跳过，并且更新当前字符的剩余次数
+
+- 如果栈中不存在当前字符，逐一处理使得满足单调栈约束，如果栈顶元素大于当前元素：
+
+  - 如果栈顶元素剩余次数 > 1，则出栈，同时更新剩余次数以及不在栈中标志位。
+  - 否则，跳出循环。(栈中剩余字符都小于栈顶，因此去除栈中其余字符会使得栈顶靠前，字典序增大)
+
+  当前字符入栈，并更新在栈中标志位
+
+```c++
+vector<int> chNums(26, 0);
+vector<bool> exists(26, 0);
+for(char c : s){
+    ++chNums[c-'a'];
+}
+stack<char> monoStack;
+for(int i = 0; i < s.length(); ++i){
+    char curC = s[i];
+    if(!exists[curC-'a']){	// 栈中不存在当前字符
+        while(!monoStack.empty() && monoStack.top() > curC){
+            char topC = monoStack.top();
+            if(chNums[topC-'a'] > 1){
+                monoStack.pop();
+                --chNums[topC-'a'];
+                exists[topC-'a'] = false;
+            }else{
+                break;
+            }
+        }
+        monoStack.push(curC);
+        exists[curC-'a'] = true;
+    }else{	// 栈中已存在当前字符
+        --chNums[curC-'a'];
+    }
+}
+string result;	// 按次序将单调栈字符放入字符串
+```
+
+##### 24. [移掉 K 位数字](https://leetcode.cn/problems/remove-k-digits/)
+
+给你一个以字符串表示的非负整数 `num` 和一个整数 `k` ，移除这个数中的 `k` 位数字，使得剩下的数字最小。请你以字符串形式返回这个最小的数字
+
+###### 解法思路
+
+要求最后数字最小，即字典序最小。使用单调递增栈，从左到右遍历字符串，去除那些不满足单调栈约束的元素，去除个数直至达到 k。如果遍历结束 k 不为 0，此时剩余数字都在单调栈中，即满足单调递增，直接从栈顶依次去除剩余 k 个。
+
+```c++
+vector<int> digits;
+for(int i = 0; i < num.length(); ++i){
+    while(k > 0 && digits.size() != 0 && digits.back() > num[i]){
+        digits.pop_back();
+        --k;
+    }
+    digits.push_back(num[i]);
+}
+string result = "";
+for(int i = 0; i < digits.size() - k; ++i){
+    if(!(result.length() == 0 && digits[i] == '0'))
+        result.push_back(digits[i]);
+}
+```
+
+##### 25. [最短无序连续子数组](https://leetcode.cn/problems/shortest-unsorted-continuous-subarray/)
+
+给你一个整数数组 nums ，你需要找出一个 连续子数组 ，如果对这个子数组进行升序排序，那么整个数组都会变为升序排序。请你找出符合题意的 最短子数组，并输出它的长度。
+
+###### 解法思路
+
+假设将数组分为三部分，A、B、C，如果 B 就是所求子数组，则 A、C 都是有序部分。且有 B、C 部分的最小元素不小于 A 的元素，A、B 部分的最大元素不大于 C 的元素。通过这种关系可以找到 B 的左右边界：
+
+- 左边界：从右往左遍历数组，记录最小元素。最后一个不满足 "B、C 部分的最小元素不小于 A 的元素" 的位置
+- 右边界：从左往右遍历数组，记录最大元素。最后一个不满足 "A、B 部分的最大元素不大于 C 的元素" 的位置
+
+```c++
+int left = nums.size(), right = -1, n = nums.size()-1;
+int min = 100001, max = -100001;
+for(int i = 0; i < nums.size(); ++i){
+    if(nums[i] >= max){
+        max = nums[i];
+    }else{
+        right = i;
+    }
+
+    if(nums[n-i] <= min){
+        min = nums[n-i];
+    }else{
+        left = n-i;
+    }
+}
+int len = right < left ? 0 : (right-left+1);
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
